--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "private-portfolio",
+  "homepage": "https://qvil.github.io/private-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
+    "gh-pages": "^1.2.0",
+    "material-ui": "next",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
