--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
+    "firebase": "4.12.1",
     "gh-pages": "^1.2.0",
     "material-ui": "next",
     "react": "^16.4.0",
