--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui": "next",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
